# tuyaopen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md  main.c  platform.json  tos
apps/tuya.ai/: README.md  README_zh.md
apps/tuya.ai/your_chat_bot/include/: ai_audio_proc.h  tuya_config.h
apps/tuya.ai/your_chat_bot/src/: ai_audio_proc.c  tuya_audio_recorder.c
apps/tuya.ai/your_chat_bot/src/display/: tuya_display.c  tuya_display_lvgl.c  ui_circle.c
apps/tuya_cloud/: README_zh.md
apps/tuya_cloud/switch_demo/: switch_demo.rst  switch_demo_CN.rst
boards/: open_t2.json  open_t3.json
boards/ESP32/: Kconfig
boards/ESP32/bread-compact-wifi/: Kconfig
boards/ESP32/common/: CMakeLists.txt
builder/: main.py
components/: CMakeLists.txt
components/http_client/: CMakeLists.txt
components/mbedtls/: CMakeLists.txt
components/tal_communication/: CMakeLists.txt
components/tal_kv/: CMakeLists.txt
components/tal_security/: CMakeLists.txt
components/tal_system/: CMakeLists.txt
components/tuya_cloud_service/: CMakeLists.txt
components/tuya_cloud_service/cloud/: tuya_ota.c
components/utilities/: CMakeLists.txt
docs/: conf.py  device_activation_flow.rst  device_communication_flow.rst  http_device_activation.rst  http_ota_upgrade.rst  index.rst  lan_tcp_interaction.rst  mqtt_cloud_interaction.rst  requirements.txt
docs/en/: .readthedocs.yaml  conf.py  contribute_guide.md  quick_start.md
docs/en/_templates/: versions.html
docs/zh/: conf.py
docs/zh/_templates/: versions.html
docs/zh/peripherals/: lcd.md
docs/zh_CN/: .readthedocs.yaml  conf.py  contribute_guide.md  quick_start.md
examples/get-started/sample_project/: project_build.ini
examples/get-started/sample_project/src/: http.c  media.c  media.h  platform.c  platform.h  sample_project.c  webrtc.c
examples/graphics/lvgl_demo/src/: example_lvgl.c
examples/media/audio/: project_build.ini
examples/media/audio/src/: example_audio.c
examples/wifi/ap/: project_build.ini
examples/wifi/scan/: project_build.ini
examples/wifi/scan/src/: example_wifi_scan.c
examples/wifi/sta/: Kconfig  project_build.ini
examples/wifi/sta/src/: example_wifi_sta.c
port/: CMakeLists.txt
port/port_linux/: CMakeLists.txt
port/port_linux/common/include/: tuya_kconfig.h
port/port_linux/src/: tkl_uart.c1
src/device_driver/display/: tkl_display.c  tkl_display.h
src/device_driver/display/tft_spi/: disp_spi_driver.c  disp_spi_driver.h  disp_spi_gc9a01.c
src/device_driver/encoder/: drv_encoder.h
src/libhttp/: CMakeLists.txt
src/libhttp/coreHTTP/source/include/: core_http_client.h
src/liblvgl/lvgl/: lv_version.h  lvgl.h
src/liblvgl/lvgl/demos/: lv_demos.c
src/liblvgl/lvgl/demos/benchmark/: lv_demo_benchmark.c
src/liblvgl/lvgl/demos/flex_layout/: lv_demo_flex_layout_ctrl_pad.c  lv_demo_flex_layout_flex_loader.c  lv_demo_flex_layout_view.c  lv_demo_flex_layout_view_ctrl_pad.c
src/liblvgl/lvgl/demos/keypad_encoder/: lv_demo_keypad_encoder.c
src/liblvgl/lvgl/demos/multilang/: lv_demo_multilang.c
src/liblvgl/lvgl/demos/music/: lv_demo_music.c  lv_demo_music.h  lv_demo_music_list.c  lv_demo_music_main.c
src/liblvgl/lvgl/demos/render/: lv_demo_render.c
src/liblvgl/lvgl/demos/scroll/: lv_demo_scroll.c
src/liblvgl/lvgl/demos/stress/: lv_demo_stress.c  lv_demo_stress.h
src/liblvgl/lvgl/demos/vector_graphic/: lv_demo_vector_graphic.c
src/liblvgl/lvgl/demos/widgets/: lv_demo_widgets.c
src/liblvgl/lvgl/env_support/pikascript/: pika_lv_point_t.c  pika_lv_timer_t.c  pika_lv_wegit.c  pika_lvgl.c  pika_lvgl_indev_t.c  pika_lvgl_lv_event.c  pika_lvgl_lv_obj.c  pika_lvgl_lv_style_t.c
src/liblvgl/lvgl/env_support/rt-thread/: lv_rt_thread_conf.h  lv_rt_thread_port.c
src/liblvgl/lvgl/examples/anim/: lv_example_anim_1.c  lv_example_anim_3.c
src/liblvgl/lvgl/examples/assets/: animimg001.c  animimg002.c  animimg003.c  img_caret_down.c  img_cogwheel_argb.c  img_cogwheel_indexed16.c  img_cogwheel_rgb.c  img_hand.c  img_skew_strip.c  img_star.c  imgbtn_left.c  imgbtn_mid.c  imgbtn_right.c
src/liblvgl/lvgl/examples/event/: lv_example_event_1.c  lv_example_event_3.c  lv_example_event_4.c
src/liblvgl/lvgl/examples/get_started/: lv_example_get_started_2.c  lv_example_get_started_3.c  lv_example_get_started_4.c
src/liblvgl/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_lcd_stm32_template.c
src/liblvgl/lvgl/examples/scroll/: lv_example_scroll_2.c  lv_example_scroll_4.c  lv_example_scroll_5.c  lv_example_scroll_6.c
src/liblvgl/lvgl/examples/styles/: lv_example_style_15.c  lv_example_style_16.c  lv_example_style_18.c  lv_example_style_2.c  lv_example_style_8.c
src/liblvgl/lvgl/src/: lv_api_map_v8.h  lv_api_map_v9_0.h  lv_api_map_v9_1.h  lv_conf_internal.h  lv_conf_kconfig.h  lv_init.c
src/liblvgl/lvgl/src/core/: lv_global.h  lv_group.c  lv_group.h  lv_group_private.h  lv_obj.c  lv_obj.h  lv_obj_class.c  lv_obj_class.h  lv_obj_class_private.h  lv_obj_draw.c  lv_obj_draw.h  lv_obj_event.c  lv_obj_event.h  lv_obj_event_private.h  lv_obj_id_builtin.c  lv_obj_pos.c  lv_obj_pos.h  lv_obj_private.h  lv_obj_property.c  lv_obj_property.h  lv_obj_scroll.c  lv_obj_scroll.h  lv_obj_style.c  lv_obj_style.h  lv_obj_style_gen.c  lv_obj_tree.c  (+4 more)
src/liblvgl/port/: lv_conf.h  lv_port_disp.c  lv_port_mem.c
src/libmqtt/: CMakeLists.txt
src/libopus/: CMakeLists.txt
src/libp2p/: CMakeLists.txt
src/libp2p/libpeer/src/: agent.c  buffer.c  config.h  dtls_srtp.c  ice.c  mdns.c  peer.c  peer_connection.c  peer_signaling.c  ports.c  rtp.c  sctp.c  socket.c  ssl_transport.c  stun.c  utils.h
src/libp2p/srtp/: srtpFilePaths.cmake
src/libp2p/srtp/libsrtp/crypto/kernel/: alloc.c
src/libp2p/srtp/libsrtp/crypto/test/: sha1_driver.c
src/libp2p/srtp/libsrtp/fuzzer/: fuzzer.c  testmem.c
src/libp2p/srtp/libsrtp/include/: srtp.h
src/libp2p/srtp/libsrtp/test/: cutest.h  rtp.c  rtp_decoder.c  srtp_driver.c
src/libtls/: CMakeLists.txt
src/libtls/src/: cipher_wrapper.c
src/tal_system/src/: tal_system.c
src/tuya_cloud_service/cloud/: tuya_http.c
src/tuya_cloud_service/tls/: tuya_tls.c
(+963 files in other folders)
